# telepathy-whosthere

./: CMakeLists.txt  README  YowsupInterface.py.h  connection.cpp  connection.h  main.cpp  protocol.cpp  protocol.h  pythoninterface.cpp  pythoninterface.h
data/: CMakeLists.txt  whosthere.manager  whosthere.service.in
debian/: changelog  control  copyright
